# Neuro-Heaven

./: .gitignore  EEG_Preprocessing.ipynb  README.md  app.py  requirements.txt
.streamlit/: config.toml
Preprocessing/: asm_prediction.ipynb  eeg-analysis.ipynb
backend/: .gitignore  README.md  asm_prediction_pipeline.py  main.py  pyproject.toml  requirements.txt
backend/src/auth/: jwt.py  security.py
backend/src/config/: __init__.py  config.json  database.py  settings.py
backend/src/core/: config.py
backend/src/db/: mongo.py  user_repo.py
backend/src/helper/: logger.py
backend/src/models/: META_graph_windows.csv  autoencoder.py  cnn_model_1.keras  config.joblib  node_scaler.joblib  user.py
backend/src/models/epilepsy_diagnosis/: seizure_model.keras
backend/src/routes/: __init__.py  auth.py
backend/src/routes/auth/: __init__.py  route.py
backend/src/routes/epi_diagnosis/: __init__.py  route.py
backend/src/schemas/: auth.py
backend/src/services/: asm_prediction_service.py  auth_service.py  epilepsy_feature_service.py  epilepsy_pipeline_service.py  mri_inference_service.py  mri_preprocessing_service.py  preprocessing_service.py  soz_inference_service.py  soz_preprocessing.py
backend/src/services/epi_diagnosis/: model_service.py  mri_inference_service.py  preprocessing_service.py  soz_inference_service.py  soz_preprocessing.py
backend/src/training/: train.py
backend/test/: test_auth_api.py  test_model.py
backend/tools/: ping_db.py
data/: ASM Prediction Dataset.csv
frontend/: app.py  requirements.txt
frontend/.streamlit/: config.toml
frontend/utils/: api_client.py  asm_predictor.py  google_oauth.py  loader.py  model_loader.py  pickle_shims.py
frontend/views/: asm_response.py  auth_page.py  dashboard.py  eeg_diagnosis.py  home.py  mri_detection.py  profile.py  soz_localization.py
models/reports/run_20260104_213031/: baseline_characteristics_train.csv  best_threshold.txt  cv_metrics_train.csv  missingness_train.csv  test_metrics.json
models/reports/run_20260104_214823/: best_threshold.txt  cv_metrics_train.csv  leakage_suspicious_names.csv  test_metrics.json
utils/: asm_predictor.py  model_loader.py
views/: asm_response.py  eeg_diagnosis.py  soz_localization.py
